[package]
name = "rcgc"
version = "0.1.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "A tracing GC in safe Rust based on `Rc`"
documentation = "https://docs.rs/rcgc/"
repository = "https://github.com/jonas-schievink/rcgc.git"
keywords = ["garbage", "collection", "collector", "cycle", "rc"]
categories = ["memory-management"]
readme = "README.md"
license = "CC0-1.0"
edition = "2018"

# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'rcgc = "[a-z0-9\\.-]+"'
replace = 'rcgc = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/rcgc/[a-z0-9\\.-]+"
replace = "https://docs.rs/rcgc/{{version}}"

[dependencies]
log = "0.4.6"

[dev-dependencies]
version-sync = "0.8"
env_logger = "0.6.0"
